examples/wgsl/tests/data/incomplete_if.wgsl
fn foo() {
  if
  let a = 5;
}

fn bar(){
  foo();
}
